--- a/cloud/package.json
+++ b/cloud/package.json
@@ -2,7 +2,6 @@
   "name": "fh-app",
   "version": "0.1.0",
   "dependencies" : {
-    "fh-nodeapp" : "*",
-    "geoip":"0.0.3"
+    "fh-nodeapp" : "*"
   }
 }
